feat: finalize devhire assessment control plane